<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To-Do List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header_text">Tasks</string>
    <string name="title_activity_create_task">Create Task</string>
    <string name="title_hint">Title</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="priority_head">Priority</string>
    <string name="radio_high">High</string>
    <string name="radio_medium">Medium</string>
    <string name="radio_low">Low</string>
    <string name="button_save">Save</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="blank_string">"  "</string>
    <string name="name">Name</string>
    <string name="information">Task Information</string>
    <string name="title_activity_edit">Edit Activity</string>

</resources>
